--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.11.14", features = ["json"] }
-futures = "0.3.18"
+futures = { version = "0.3.18", features = ["thread-pool"] }
 tokio = { version = "1.13.0", features = ["full"] }
 polars = { version = "0.26.1", features = ["serde", "json"] }
 serde = { version = "1.0.130", features = ["derive"] }
