--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11.14", features = ["json"] }
+reqwest = { version = "0.11.14", features = ["json", "blocking"] }
 futures = { version = "0.3.18", features = ["thread-pool"] }
-tokio = { version = "1.13.0", features = ["full"] }
-polars = { version = "0.26.1", features = ["serde", "json"] }
+polars = { version = "0.27.2", features = ["serde", "json"] }
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.70"
 chrono = { version = "0.4.23", features = ["serde"] }
