--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.11.14", features = ["json", "blocking"] }
 futures = { version = "0.3.18", features = ["thread-pool"] }
-polars = { version = "0.27.2", features = ["serde", "json"] }
+polars = { version = "0.27.2", features = ["serde", "json", "rows", "dtype-struct"] }
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.70"
-chrono = { version = "0.4.23", features = ["serde"] }
+chrono = { version = "0.4.23", features = ["serde", "std"] }
